style<*>: borders of all windows

--- a/src/Resources/Themes/Light.xaml
+++ b/src/Resources/Themes/Light.xaml
@@ -3,8 +3,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <SolidColorBrush x:Key="Brush.Logo" Color="#FFF05133"/>
 
-    <SolidColorBrush x:Key="Brush.TitleBar" Color="White"/>
     <SolidColorBrush x:Key="Brush.Window" Color="#FFF8F8F8"/>
+    <SolidColorBrush x:Key="Brush.WindowBorder" Color="#FF505050"/>
+
+    <SolidColorBrush x:Key="Brush.TitleBar" Color="White"/>
     <SolidColorBrush x:Key="Brush.NewPageHover" Color="#1D000000"/>
     <SolidColorBrush x:Key="Brush.Popup" Color="#FFF8F8F8"/>
     <SolidColorBrush x:Key="Brush.Contents" Color="White"/>
