--- a/src/Views/Launcher.xaml
+++ b/src/Views/Launcher.xaml
@@ -8,10 +8,11 @@
         xmlns:widgets="clr-namespace:SourceGit.Views.Widgets"
         xmlns:models="clr-namespace:SourceGit.Models"
         mc:Ignorable="d"
-        UseLayoutRounding="True"
-        WindowStartupLocation="CenterScreen"
         TextOptions.TextFormattingMode="Display"
         TextOptions.TextRenderingMode="ClearType"
+        RenderOptions.ClearTypeHint="Enabled"
+        UseLayoutRounding="True"
+        WindowStartupLocation="CenterScreen"
         MinWidth="1280" MinHeight="720"
         Title="{StaticResource Text.About.Title}"
         Width="{Binding Source={x:Static models:Preference.Instance}, Path=Window.Width, Mode=TwoWay}"
