--- a/src/Resources/Themes/Dark.xaml
+++ b/src/Resources/Themes/Dark.xaml
@@ -3,8 +3,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <SolidColorBrush x:Key="Brush.Logo" Color="#FFF05133"/>
 
-    <SolidColorBrush x:Key="Brush.TitleBar" Color="#FF1F1F1F"/>
     <SolidColorBrush x:Key="Brush.Window" Color="#FF252525"/>
+    <SolidColorBrush x:Key="Brush.WindowBorder" Color="#FF101010"/>
+
+    <SolidColorBrush x:Key="Brush.TitleBar" Color="#FF1F1F1F"/>
     <SolidColorBrush x:Key="Brush.NewPageHover" Color="#FF404040"/>
     <SolidColorBrush x:Key="Brush.Popup" Color="#FF2B2B2B"/>
     <SolidColorBrush x:Key="Brush.Contents" Color="#FF1B1B1B"/>
