feature<Archive>: supports archive by branches and tags

--- a/src/Resources/Locales/en_US.xaml
+++ b/src/Resources/Locales/en_US.xaml
@@ -39,7 +39,8 @@
     <sys:String x:Key="Text.Apply.ErrorAll">Error All</sys:String>
     <sys:String x:Key="Text.Apply.ErrorAll.Desc">Similar to 'error', but shows more</sys:String>
 
-    <sys:String x:Key="Text.Archive">Archive</sys:String>
+    <sys:String x:Key="Text.Archive">Archive ...</sys:String>
+    <sys:String x:Key="Text.Archive.Title">Archive</sys:String>
     <sys:String x:Key="Text.Archive.Revision">Revision :</sys:String>
     <sys:String x:Key="Text.Archive.File">Save Archive To :</sys:String>
     <sys:String x:Key="Text.Archive.File.Placeholder">Select archive file path</sys:String>
@@ -190,7 +191,6 @@
     <sys:String x:Key="Text.CommitCM.CherryPick">Cherry-Pick This Commit</sys:String>
     <sys:String x:Key="Text.CommitCM.Revert">Revert Commit</sys:String>
     <sys:String x:Key="Text.CommitCM.SaveAsPatch">Save as Patch ...</sys:String>
-    <sys:String x:Key="Text.CommitCM.Archive">Archive ...</sys:String>
     <sys:String x:Key="Text.CommitCM.CopySHA">Copy Commit SHA</sys:String>
     <sys:String x:Key="Text.CommitCM.CopyInfo">Copy Commit Info</sys:String>
 
