feature<Launcher>: add common hotkeys
1. `Ctrl + Tab` goto next page
2. `Ctrl + W` close current active page
3. `Ctrl + T` open new page
4. `Ctrl + F` open search bar if possible
5. `Ctrl + [0-9]` go to page at given index if possible
6. `F5` refresh current repository if possible

--- a/src/Views/Widgets/PageTabBar.xaml
+++ b/src/Views/Widgets/PageTabBar.xaml
@@ -49,6 +49,7 @@
                     <ListBox.ItemContainerStyle>
                         <Style TargetType="{x:Type ListBoxItem}">
                             <Setter Property="AllowDrop" Value="True"/>
+                            <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
                             <Setter Property="Template">
                                 <Setter.Value>
                                     <ControlTemplate TargetType="{x:Type ListBoxItem}">
