--- a/src/Resources/Styles/ListBox.xaml
+++ b/src/Resources/Styles/ListBox.xaml
@@ -4,6 +4,7 @@
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="VirtualizingPanel.IsVirtualizing" Value="True"/>
 
