--- a/src/Resources/Locales/en_US.xaml
+++ b/src/Resources/Locales/en_US.xaml
@@ -128,6 +128,8 @@
     <sys:String x:Key="Text.Dashboard.Submodules">SUBMODULES</sys:String>
     <sys:String x:Key="Text.Dashboard.Submodules.Add">ADD SUBMODULE</sys:String>
     <sys:String x:Key="Text.Dashboard.Submodules.Update">UPDATE SUBMODULE</sys:String>
+    <sys:String x:Key="Text.Dashboard.SubTrees">SUBTREES</sys:String>
+    <sys:String x:Key="Text.Dashboard.SubTrees.Add">ADD/LINK SUBTREE</sys:String>
     <sys:String x:Key="Text.Dashboard.Resolve">RESOLVE</sys:String>
     <sys:String x:Key="Text.Dashboard.Continue">CONTINUE</sys:String>
     <sys:String x:Key="Text.Dashboard.Abort">ABORT</sys:String>
@@ -425,7 +427,33 @@
 
     <sys:String x:Key="Text.Restart.Title">NOTICE</sys:String>
     <sys:String x:Key="Text.Restart.Content">Restart required to apply changes in preference. Restart now?</sys:String>
-    
+
+    <sys:String x:Key="Text.AddSubTree">Add/Link SubTree</sys:String>
+    <sys:String x:Key="Text.AddSubTree.Source">Source URL :</sys:String>
+    <sys:String x:Key="Text.AddSubTree.Branch">Branch/Commit :</sys:String>
+    <sys:String x:Key="Text.AddSubTree.Prefix">Local Relative Path :</sys:String>
+    <sys:String x:Key="Text.AddSubTree.Squash">Squash commits?</sys:String>
+
+    <sys:String x:Key="Text.EditSubTree">Edit SubTree</sys:String>
+    <sys:String x:Key="Text.EditSubTree.Source">Source URL :</sys:String>
+    <sys:String x:Key="Text.EditSubTree.Prefix">Local Relative Path :</sys:String>
+
+    <sys:String x:Key="Text.UnlinkSubTree">Unlink SubTree</sys:String>
+    <sys:String x:Key="Text.UnlinkSubTree.Prefix">Local Relative Path :</sys:String>
+    <sys:String x:Key="Text.UnlinkSubTree.Tips">This will only remove links.</sys:String>
+
+    <sys:String x:Key="Text.SubTreePullOrPush.Pull">Pull Changes Of SubTree</sys:String>
+    <sys:String x:Key="Text.SubTreePullOrPush.Push">Push Changes Of SubTree</sys:String>
+    <sys:String x:Key="Text.SubTreePullOrPush.Prefix">Local Relative Path :</sys:String>
+    <sys:String x:Key="Text.SubTreePullOrPush.Source">Remote :</sys:String>
+    <sys:String x:Key="Text.SubTreePullOrPush.Branch">Branch :</sys:String>
+    <sys:String x:Key="Text.SubTreePullOrPush.Squash">Squash commits?</sys:String>
+
+    <sys:String x:Key="Text.SubTree.Edit">Edit ...</sys:String>
+    <sys:String x:Key="Text.SubTree.Unlink">Unlink ...</sys:String>
+    <sys:String x:Key="Text.SubTree.Pull">Pull ...</sys:String>
+    <sys:String x:Key="Text.SubTree.Push">Push ...</sys:String>
+
     <sys:String x:Key="Text.NotConfigured">Git has NOT been configured.\nPlease to go [Preference] and configure it first.</sys:String>
     <sys:String x:Key="Text.PathNotFound">Path[{0}] not exists!</sys:String>
     <sys:String x:Key="Text.MissingBash">Can NOT locate bash.exe. Make sure bash.exe exists under the same folder with git.exe</sys:String>
@@ -448,6 +476,7 @@
     <sys:String x:Key="Text.DuplicatedTagName">Duplicated tag name!</sys:String>
     <sys:String x:Key="Text.EmptyCommitMessage">Commit subject can NOT be empty</sys:String>
     <sys:String x:Key="Text.BadPatchFile">Invalid path for patch file</sys:String>
-    <sys:String x:Key="Text.BadSubmodulePath">Invalid path for submodules</sys:String>
+    <sys:String x:Key="Text.BadRelativePath">Invalid relative path</sys:String>
     <sys:String x:Key="Text.BadArchiveFile">Invalid path for archive file</sys:String>
+    <sys:String x:Key="Text.Required">This field is required</sys:String>
 </ResourceDictionary>
