--- a/src/Views/Popups/AddSubTree.xaml
+++ b/src/Views/Popups/AddSubTree.xaml
@@ -1,5 +1,5 @@
 <controls:PopupWidget 
-    x:Class="SourceGit.Views.Popups.AddSubmodule"
+    x:Class="SourceGit.Views.Popups.AddSubTree"
     x:Name="me"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,9 +8,10 @@
     xmlns:controls="clr-namespace:SourceGit.Views.Controls"
     xmlns:validations="clr-namespace:SourceGit.Views.Validations"
     mc:Ignorable="d" 
-    d:DesignWidth="500">
+    d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="32"/>
             <RowDefinition Height="32"/>
             <RowDefinition Height="32"/>
             <RowDefinition Height="32"/>
@@ -24,15 +25,14 @@
         <TextBlock
             Grid.Row="0" Grid.Column="0"
             Margin="0,0,8,0"
-            Text="{StaticResource Text.URL}"
+            Text="{StaticResource Text.AddSubTree.Source}"
             HorizontalAlignment="Right"/>
-        <controls:TextEdit
+        <controls:TextEdit 
             Grid.Row="0" Grid.Column="1"
-            x:Name="txtURL"
-            Height="24"
-            Placeholder="{StaticResource Text.RepositoryURL}">
+            x:Name="txtSource"
+            Height="24">
             <controls:TextEdit.Text>
-                <Binding ElementName="me" Path="URL" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
+                <Binding ElementName="me" Path="Source" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
                     <Binding.ValidationRules>
                         <validations:GitURL/>
                     </Binding.ValidationRules>
@@ -43,15 +43,32 @@
         <TextBlock
             Grid.Row="1" Grid.Column="0"
             Margin="0,0,8,0"
-            Text="{StaticResource Text.ParentFolder}"
+            Text="{StaticResource Text.AddSubTree.Branch}"
             HorizontalAlignment="Right"/>
-        <controls:TextEdit
+        <controls:TextEdit 
             Grid.Row="1" Grid.Column="1"
-            x:Name="txtPath"
-            Height="24"
-            Placeholder="{StaticResource Text.ParentFolder.Placeholder}">
+            x:Name="txtRef"
+            Height="24">
             <controls:TextEdit.Text>
-                <Binding ElementName="me" Path="Path" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
+                <Binding ElementName="me" Path="Ref" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
+                    <Binding.ValidationRules>
+                        <validations:Required/>
+                    </Binding.ValidationRules>
+                </Binding>
+            </controls:TextEdit.Text>
+        </controls:TextEdit>
+
+        <TextBlock
+            Grid.Row="2" Grid.Column="0"
+            Margin="0,0,8,0"
+            Text="{StaticResource Text.AddSubTree.Prefix}"
+            HorizontalAlignment="Right"/>
+        <controls:TextEdit 
+            Grid.Row="2" Grid.Column="1"
+            x:Name="txtPrefix"
+            Height="24">
+            <controls:TextEdit.Text>
+                <Binding ElementName="me" Path="Prefix" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
                     <Binding.ValidationRules>
                         <validations:RelativePath/>
                     </Binding.ValidationRules>
@@ -60,10 +77,10 @@
         </controls:TextEdit>
 
         <CheckBox 
-            Grid.Row="2" Grid.Column="1"
+            Grid.Row="3" Grid.Column="1"
             Margin="0,4,0,0"
-            x:Name="chkNested"
+            x:Name="chkSquash"
             IsChecked="True"
-            Content="{StaticResource Text.Submodule.FetchNested}"/>
+            Content="{StaticResource Text.AddSubTree.Squash}"/>
     </Grid>
 </controls:PopupWidget>
