--- a/src/Views/Popups/EditSubTree.xaml
+++ b/src/Views/Popups/EditSubTree.xaml
@@ -1,5 +1,5 @@
 <controls:PopupWidget 
-    x:Class="SourceGit.Views.Popups.AddSubmodule"
+    x:Class="SourceGit.Views.Popups.EditSubTree"
     x:Name="me"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,10 +8,9 @@
     xmlns:controls="clr-namespace:SourceGit.Views.Controls"
     xmlns:validations="clr-namespace:SourceGit.Views.Validations"
     mc:Ignorable="d" 
-    d:DesignWidth="500">
+    d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="32"/>
             <RowDefinition Height="32"/>
             <RowDefinition Height="32"/>
         </Grid.RowDefinitions>
@@ -24,46 +23,32 @@
         <TextBlock
             Grid.Row="0" Grid.Column="0"
             Margin="0,0,8,0"
-            Text="{StaticResource Text.URL}"
+            Text="{StaticResource Text.EditSubTree.Prefix}"
             HorizontalAlignment="Right"/>
-        <controls:TextEdit
+        <StackPanel
             Grid.Row="0" Grid.Column="1"
-            x:Name="txtURL"
-            Height="24"
-            Placeholder="{StaticResource Text.RepositoryURL}">
+            Orientation="Horizontal"
+            VerticalAlignment="Center">
+            <Path Width="14" Height="14" Data="{StaticResource Icon.SubTree}"/>
+            <TextBlock x:Name="txtPrefix" Margin="8,0,0,0"/>
+        </StackPanel>
+
+        <TextBlock
+            Grid.Row="1" Grid.Column="0"
+            Margin="0,0,8,0"
+            Text="{StaticResource Text.EditSubTree.Source}"
+            HorizontalAlignment="Right"/>
+        <controls:TextEdit 
+            Grid.Row="1" Grid.Column="1"
+            x:Name="txtSource"
+            Height="24">
             <controls:TextEdit.Text>
-                <Binding ElementName="me" Path="URL" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
+                <Binding ElementName="me" Path="Source" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
                     <Binding.ValidationRules>
                         <validations:GitURL/>
                     </Binding.ValidationRules>
                 </Binding>
             </controls:TextEdit.Text>
         </controls:TextEdit>
-
-        <TextBlock
-            Grid.Row="1" Grid.Column="0"
-            Margin="0,0,8,0"
-            Text="{StaticResource Text.ParentFolder}"
-            HorizontalAlignment="Right"/>
-        <controls:TextEdit
-            Grid.Row="1" Grid.Column="1"
-            x:Name="txtPath"
-            Height="24"
-            Placeholder="{StaticResource Text.ParentFolder.Placeholder}">
-            <controls:TextEdit.Text>
-                <Binding ElementName="me" Path="Path" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
-                    <Binding.ValidationRules>
-                        <validations:RelativePath/>
-                    </Binding.ValidationRules>
-                </Binding>
-            </controls:TextEdit.Text>
-        </controls:TextEdit>
-
-        <CheckBox 
-            Grid.Row="2" Grid.Column="1"
-            Margin="0,4,0,0"
-            x:Name="chkNested"
-            IsChecked="True"
-            Content="{StaticResource Text.Submodule.FetchNested}"/>
     </Grid>
 </controls:PopupWidget>
