--- a/src/Views/Popups/SubTreePull.xaml
+++ b/src/Views/Popups/SubTreePull.xaml
@@ -1,5 +1,5 @@
 <controls:PopupWidget 
-    x:Class="SourceGit.Views.Popups.AddSubmodule"
+    x:Class="SourceGit.Views.Popups.SubTreePull"
     x:Name="me"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,9 +8,10 @@
     xmlns:controls="clr-namespace:SourceGit.Views.Controls"
     xmlns:validations="clr-namespace:SourceGit.Views.Validations"
     mc:Ignorable="d" 
-    d:DesignWidth="500">
+    d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="32"/>
             <RowDefinition Height="32"/>
             <RowDefinition Height="32"/>
             <RowDefinition Height="32"/>
@@ -24,46 +25,52 @@
         <TextBlock
             Grid.Row="0" Grid.Column="0"
             Margin="0,0,8,0"
-            Text="{StaticResource Text.URL}"
+            Text="{StaticResource Text.SubTreePullOrPush.Prefix}"
             HorizontalAlignment="Right"/>
-        <controls:TextEdit
+        <StackPanel
             Grid.Row="0" Grid.Column="1"
-            x:Name="txtURL"
-            Height="24"
-            Placeholder="{StaticResource Text.RepositoryURL}">
-            <controls:TextEdit.Text>
-                <Binding ElementName="me" Path="URL" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
-                    <Binding.ValidationRules>
-                        <validations:GitURL/>
-                    </Binding.ValidationRules>
-                </Binding>
-            </controls:TextEdit.Text>
-        </controls:TextEdit>
+            Orientation="Horizontal"
+            VerticalAlignment="Center">
+            <Path Width="14" Height="14" Data="{StaticResource Icon.SubTree}"/>
+            <TextBlock x:Name="txtPrefix" Margin="8,0,0,0"/>
+        </StackPanel>
 
         <TextBlock
             Grid.Row="1" Grid.Column="0"
             Margin="0,0,8,0"
-            Text="{StaticResource Text.ParentFolder}"
+            Text="{StaticResource Text.SubTreePullOrPush.Source}"
             HorizontalAlignment="Right"/>
-        <controls:TextEdit
+        <StackPanel
             Grid.Row="1" Grid.Column="1"
-            x:Name="txtPath"
-            Height="24"
-            Placeholder="{StaticResource Text.ParentFolder.Placeholder}">
+            Orientation="Horizontal"
+            VerticalAlignment="Center">
+            <Path Width="14" Height="14" Data="{StaticResource Icon.Remote}"/>
+            <TextBlock x:Name="txtSource" Margin="8,0,0,0"/>
+        </StackPanel>
+
+        <TextBlock
+            Grid.Row="2" Grid.Column="0"
+            Margin="0,0,8,0"
+            Text="{StaticResource Text.SubTreePullOrPush.Branch}"
+            HorizontalAlignment="Right"/>
+        <controls:TextEdit 
+            Grid.Row="2" Grid.Column="1"
+            x:Name="txtBranch"
+            Height="24">
             <controls:TextEdit.Text>
-                <Binding ElementName="me" Path="Path" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
+                <Binding ElementName="me" Path="Branch" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
                     <Binding.ValidationRules>
-                        <validations:RelativePath/>
+                        <validations:Required/>
                     </Binding.ValidationRules>
                 </Binding>
             </controls:TextEdit.Text>
         </controls:TextEdit>
 
         <CheckBox 
-            Grid.Row="2" Grid.Column="1"
+            Grid.Row="3" Grid.Column="1"
             Margin="0,4,0,0"
-            x:Name="chkNested"
+            x:Name="chkSquash"
             IsChecked="True"
-            Content="{StaticResource Text.Submodule.FetchNested}"/>
+            Content="{StaticResource Text.SubTreePullOrPush.Squash}"/>
     </Grid>
 </controls:PopupWidget>
