--- a/src/Views/About.xaml
+++ b/src/Views/About.xaml
@@ -81,8 +81,8 @@
                 
                 <!-- Official site -->
                 <TextBlock HorizontalAlignment="Center" Margin="0,16,0,4">
-                    <Hyperlink NavigateUri="https://gitee.com/sourcegit/SourceGit.git" RequestNavigate="OnRequestNavigate">
-                        <Run Text="https://gitee.com/sourcegit/SourceGit.git"/>
+                    <Hyperlink NavigateUri="https://gitee.com/sourcegit/sourcegit.git" RequestNavigate="OnRequestNavigate">
+                        <Run Text="https://gitee.com/sourcegit/sourcegit.git"/>
                     </Hyperlink>
                 </TextBlock>
                 
